examples/datalog/09_recursion/42_path_with_cost.dl
% Test: Path finding with accumulated cost
% Expected: Compute total cost of paths
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_path_cost
.kg use test_path_cost

+weighted_edge[("a", "b", 10), ("b", "c", 20), ("c", "d", 15), ("a", "d", 100)].

% Base: direct edges
+path_cost(From, To, Cost) :- weighted_edge(From, To, Cost).

% Recursive: extend path
+path_cost(From, To, Total) :- path_cost(From, Mid, C1), weighted_edge(Mid, To, C2), Total = C1 + C2.

?- path_cost(From, To, Cost).

.kg use default
.kg drop test_path_cost
